--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 		<meta name=viewport” content="width=device-width">
 		<meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
 		<meta name=“author" content=“Katy Cassidy | ihatetoast">
-		<title>Katy Cassidy | RWD</title>
+		<title>Katy Cassidy | contact</title>
 		<link href="https://fonts.googleapis.com/css?family=Asul|Chivo" rel="stylesheet">
 		<link rel="stylesheet" href="./assets/styles/reset.css">
 		<link rel="stylesheet" href="./assets/styles/style.css">
@@ -14,39 +14,59 @@
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
 	<body>
-		
 		<header>
 			<div class="content-header">
 
 				<div class="brand">
 					<div class="name">
-						<h1>Katy <div id="ihtlogo"><img  src="./assets/images/ihtLogo.png" alt="greyhound eating toast"></div>
-						 Cassidy</h1>
+						<h1>Katy <div id="ihtlogo"><img src="./assets/images/ihtLogo.png" alt="greyhound eating toast">
+						</div> Cassidy</h1>
 					</div>
 				</div>
 
 				<nav>
 					<ul id="navLinks">
-						<li><a class="active" href="./index.html">about</a></li>
+						<li><a class="inactive" href="./index.html">about</a></li>
 						<li><a class="inactive" href="./portfolio.html">portfolio</a></li>
-						<li><a class="inactive" href="./contact.html">contact</a></li>
+						<li><a class="active" href="./contact.html">contact</a></li>
 					</ul>
 				</nav>
 
 			</div>
 		</header>
- 	
+
 		<section id="main">
 
 			<article class="aboutContent">
-				<h2>About Me</h2>
-				<hr>
-				<div class="imgWithText">
-					<img src="./assets/images/couch.svg" alt="svg illustration of a dog and a woman on a couch">
-					<p>Programming got its hooks into me when I taught 4th-grade math and used MicroWorlds to augment my lessons. It was the first time I understood that coding was creative, fun, and for anyone. As I teach Python to middle schoolers, I ensure my students see the creativity–logic connection. And to anyone who'll listen, I campaign to encourage coding as a habit and passtime, like reading, knitting, and jogging. </p>
-          <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and I can use creativity and logic to build apps that make people’s lives better.</p>
-			</div>
-			</article>
+        
+						<h2>Say hello.</h2>
+						<hr>
+						<div>
+              <p>I have too many books on my TBR being ignored because of the numerous blog posts and Medium articles I'm reading on the topic of <span><script  type="text/javascript">
+                //<![CDATA[
+                <!--
+                var x="function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
+                "harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\""+
+                "\\\\,l=x.length;for(i=0;i<l;i++){if(i<5)y++;y%=127;o+=String.fromCharCode(x" +
+                ".charCodeAt(i)^(y++));}return o;}f(\\\"\\\\bgiycj~e<df|brtw29 |>wRDD\\\\\\\\"+
+                "036x\\\\\\\\007KFAE^D\\\\\\\\026FO[Iq[[UASCWXIO\\\\\\\\022^QR\\\\\\\\034cb7" +
+                "-1*\\\\\\\\\\\"\\\\u\\\\\\\\025h\\\\\\\\002l%/;5q&<5&\\\\\\\\\\\"\\\\{x;//|" +
+                "\\\\\\\\024~3\\\\\\\\017\\\\\\\\027\\\\\\\\007C\\\\\\\\001\\\\\\\\010\\\\\\" +
+                "\\007\\\\\\\\016\\\\\\\\004H6IR.\\\\\\\\001\\\\\\\\001\\\\\\\\004\\\\\\\\02" +
+                "0\\\\\\\\021\\\\\\\\007HZ\\\\\\\\027IZPAKG\\\"\\\\,5)\\\"(f};)lo,0(rtsbus.o" +
+                " nruter};)i(tArahc.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l=+l;x=+x{yrt{)84=!" +
+                ")31/l(tAedoCrahc.x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i rav{)x(f noitcnuf\")" ;
+                while(x=eval(x));
+                //-->
+                //]]>
+                </script></span> using email obfuscation, <span class="cranky"><a href="mailto:katy@ihatetoast.com?subject=Hi, IHateToast. I like your style.">"mailto:"</a></span>, and the easy hack of using <span class="cranky">my name at my domain</span>.</p>
+              <p>Here is my truth. I am not fussed. My spam filter is good. Often too good. I'll never make anyone happy, and &mdash; let&apos;s be honest, okay? &mdash; most of our spam comes from Aunt Helen&apos;s inability to grasp the BCC field. I need to make only my manager happy. In the case of my own portfolio, guess who the manager is. I'll let those who care to battle the pros and cons of mailto, hacks, reCAPTCHA, Coke vs Pepsi, GIF/ghif vs GIF/jiff, and semicolons in NodeJS. </p>
+              <p>Me? I'm going to ride my bike and eat some doughnuts!</p>
+            </div>
+            <div>
+              <img class="imgWithText" src="./assets/images/bike.svg" alt="a bike with sprinkle doughnuts as wheels">
+            </div>
+					</article>
 
 			<aside>
 				<div class="title">
@@ -129,6 +149,7 @@
 					<div class="clear"></div>
 				</div>
 			</aside>
+
 		</section>
 		<footer>
 			<p>Katy Cassidy | ihatetoast </p>
