--- a/portfolio.html
+++ b/portfolio.html
@@ -52,13 +52,22 @@
 						<hr>
 						<section class="projectHolder">
 
+              <div class="projectPic">
+                  <img src="./assets/liri.gif" alt="gif of code">
+                  <a href="https://github.com/ihatetoast/liri-node-app">
+                    <div class="projectTitleBar0"></div>
+                    <div class="projectTitleBar1"><h4>LIRI</h4></div>
+                  </a>
+              </div>
+
 							<div class="projectPic">
 								<img src="./assets/images/hangman.svg" alt="image from a hangman game">
 								<a href=" http://www.ihatetoast.com/hangman-game/">
 									<div class="projectTitleBar0"></div>
 									<div class="projectTitleBar1"><h4>Hangman</h4></div>
 								</a>
-							</div>
+              </div>
+              
               <div class="projectPic">
                 <img src="./assets/images/day49.png" alt="dance dance revolution pad">
                 <a href="http://ihatetoast-css-images.surge.sh/" target="_blank">
@@ -67,6 +76,7 @@
                   </div>
                 </a>
               </div>
+
               <div class="projectPic">
                 <img src="./assets/images/stan.jpg" alt="a woman kissing a greyhound">
                 <a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">
