fixing responsiveness index about

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,15 +14,7 @@
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
 	<body>
-		<!-- 
-		*********************************************************
-		*********************************************************
-		HEADER: 
-		contains div of name and logo, nav with links
-		*********************************************************
-		*********************************************************
- 		-->
- 		<!-- todo: undo the inline img styling -->
+
 		<header>
 			<div class="content-header">
 				<div class="brand">
@@ -31,7 +23,6 @@
 						</div> Cassidy</h1>
 					</div>
 				</div>
-
 
 				<nav>
 					<ul id="navLinks">
@@ -51,13 +42,25 @@
 						<h2>Portfolio</h2>
 						<hr>
 						<section class="projectHolder">
-
-              <div class="projectPic">
-                  <img src="./assets/liri.gif" alt="gif of code">
-                  <a href="https://github.com/ihatetoast/liri-node-app">
-                    <div class="projectTitleBar0"></div>
-                    <div class="projectTitleBar1"><h4>LIRI</h4></div>
-                  </a>
+              <div class="projectFrame">
+                <div class="projectPic">
+                    <img src="./assets/liri-app.gif" alt="gif of code">
+                    <a href="https://github.com/ihatetoast/liri-node-app">
+                      <div class="projectTitleBar0"></div>
+                      <div class="projectTitleBar1"><h4>LIRI</h4></div>
+                    </a>
+                </div>
+                <div class="projectDesc">
+                  <div class="projectPara">
+                    <p>Horrido! Schabracke und Schlachtschüssel grämen emsig Waschweib. Der kess Wildfang foppen. Feuertaufe und Eisbein abkupfern pompös Donnerwetter. Der Lümmel piesacken die gemach Lausbub. Die Wuchtbrumme abkupfern die hochnäsig Tölpel.</p>
+                  </div>
+                  <div class="projectLinks">
+                    <ul>
+                      <li><a href="#">Live</a></li>
+                      <li><a href="#">Code</a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
 
 							<div class="projectPic">
@@ -84,7 +87,6 @@
                   <div class="projectTitleBar1"><h4>Critter Sitter</h4></div>
                 </a>
               </div>
-						
 
 							<div class="projectPic">
 								<img src="./assets/images/eggfoxfeathers.svg" alt="Foxes, eggs, and feathers in varying states of discomfort">
