major overhaul. not finished. borked

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	</head>
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
-	<body>
+	<body class="site">
 		<header>
 			<div class="content-header">
 
@@ -35,11 +35,11 @@
 			</div>
 		</header>
 
-		<section id="main">
+		<section class="main site-content">
 
 			<article class="aboutContent">
         
-						<h2>Say hello.</h2>
+						<h3 class="titleHeader">Say hello.</h3>
 						<hr>
 						<div>
               <p>I have too many books on my TBR being ignored because of the numerous blog posts and Medium articles I'm reading on the topic of <span><script  type="text/javascript">
@@ -69,8 +69,8 @@
 					</article>
 
 			<aside>
-				<div class="title">
-					<h3>Find me</h3>
+				<div class="socialMedia">
+					<h3 class="titleHeader">Find Me</h3>
 					<hr>
 					<div class="socialMedia-container">
 
