--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,7 @@
 	</head>
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
-	<body>
-
+	<body class="site">
 		<header>
 			<div class="content-header">
 				<div class="brand">
@@ -36,10 +35,10 @@
 		</header>
 		
  	
-		<section id="main">
+		<section class="main site-content">
 
 			<article class="aboutContent">
-						<h2>Portfolio</h2>
+						<h3 class="titleHeader">Portfolio</h3>
 						<hr>
 						<section class="projectHolder">
               <div class="projectFrame">
@@ -108,8 +107,8 @@
 					</article>
 
 			<aside>
-				<div class="title">
-					<h3>Find me</h3>
+				<div class="socialMedia">
+					<h3 class="titleHeader">Find Me</h3>
 					<hr>
 					<div class="socialMedia-container">
 
