--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 		<link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
 	</head>
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
-
-	<body>
-		
+	<body class='site'>
 		<header>
 			<div class="content-header">
-
 				<div class="brand">
 					<div class="name">
 						<h1>Katy <div id="ihtlogo"><img  src="./assets/images/ihtLogo.png" alt="greyhound eating toast"></div>
@@ -36,21 +33,24 @@
 			</div>
 		</header>
  	
-		<section id="main">
+		<section class="main site-content">
 
 			<article class="aboutContent">
-				<h2>About Me</h2>
-
+				<h3 class="titleHeader">About Me</h3>
+				<hr>
 				<div class="imgWithText">
-					<img src="./assets/images/couch.svg" alt="svg illustration of a dog and a woman on a couch">
-					<p>Programming got its hooks into me when I taught 4th-grade math and used MicroWorlds to augment my lessons. It was the first time I understood that coding was creative, fun, and for anyone. As I teach Python to middle schoolers, I ensure my students see the creativity–logic connection. And to anyone who'll listen, I campaign to encourage coding as a habit and passtime, like reading, knitting, and jogging. </p>
-          <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and I can use creativity and logic to build apps that make people’s lives better.</p>
+          <img src="./assets/images/couch.svg" alt="svg illustration of a dog and a woman on a couch" class="aboutImg">
+          <div>
+              <p>Programming got its hooks into me when I taught 4th-grade math and used MicroWorlds to augment my lessons. It was the first time I understood that coding was creative, fun, and for anyone. As I teach Python to middle schoolers, I ensure my students see the creativity–logic connection. And to anyone who'll listen, I campaign to encourage coding as a habit and passtime, like reading, knitting, and jogging. </p>
+              <p>Everything I’ve learned and done for a living comes together with programming: linguistics, writing, math; and I can use creativity and logic to build apps that make people’s lives better.</p>
+          </div>
+					
 			</div>
 			</article>
 
 			<aside>
-				<div class="title">
-					<h3>Find me</h3>
+				<div class="socialMedia">
+					<h3 class="titleHeader">Find Me</h3>
 					<hr>
 					<div class="socialMedia-container">
 
@@ -129,7 +129,7 @@
 					<div class="clear"></div>
 				</div>
 			</aside>
-		</section>
+		</section> <!-- END #MAIN -->
 		<footer>
 			<p>Katy Cassidy | ihatetoast </p>
 		</footer>
