--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">	
-		<meta name=viewport” content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
 		<meta name=“author" content=“Katy Cassidy | ihatetoast">
 		<title>Katy Cassidy</title>
@@ -48,8 +48,8 @@
 			</div>
 			</article>
 
-			<aside>
-				<div class="socialMedia">
+			<aside class="socialMedia">
+				<div >
 					<h3 class="titleHeader">Find Me</h3>
 					<hr>
 					<div class="socialMedia-container">
