fixed the works collection portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -144,7 +144,7 @@
                       </div>
                     </div>
 
-                         <!-- REACT: CRITTER SITTER -->
+                <!-- DODGY HAROLD -->
                 <div class="projectFrame">
                   <div class="projectPic">
                     <img src="./assets/images/creepyman.svg" alt="a man in a blue hoodie">
@@ -153,28 +153,18 @@
                       <div class="projectTitleBar1"><h4>Dodgy Harold</h4></div>
                     </a>
                   </div>
-                    <div class="projectDesc">
-                      <p>Dodgy Harold happened when I could not decide whether to practice Sketch or AJAX calls to APIs.</p>
-                      <p>It is easy to get stuck in the serious gear while learning JavaScript, so I make a point of creating little apps that do nothing but entertain me.</p>
-                    </div>
-                    <div class="projectLinks">
-                        <ul>
-                          <li><a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">Get Advice</a></li>
-                          <li><a href="https://github.com/ihatetoast/creepyman-advice" target="_blank">Code</a></li>
-                        </ul>
-                      </div>
-                      </div>
-<!-- 
+                  <div class="projectDesc">
+                    <p>Dodgy Harold happened when I could not decide whether to practice Sketch or AJAX calls to APIs.</p>
+                    <p>It is easy to get stuck in the serious gear while learning JavaScript, so I make a point of creating little apps that do nothing but entertain me.</p>
+                  </div>
+                  <div class="projectLinks">
+                    <ul>
+                      <li><a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">Get Advice</a></li>
+                      <li><a href="https://github.com/ihatetoast/creepyman-advice" target="_blank">Code</a></li>
+                    </ul>
+                  </div>
+                </div>
 
-							<div class="projectPic">
-								<img src="./assets/images/creepyman.svg" alt="a man in a blue hoodie">
-								<a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">
-									<div class="projectTitleBar0"></div>
-									<div class="projectTitleBar1"><h4>Dodgy Harold</h4></div>
-								</a>
-							</div>
-							-->
-						
 					</article> 
  
           <aside class="socialMedia">
@@ -267,25 +257,26 @@
 	</body>
 </html>
 
-<!-- PROJECT TEMPLATE: -->
-<!-- 
-              <div class="projectFrame">
-                  <div class="projectPic">
-                      <img src="./assets/liri-app.gif" alt="gif of code">
-                      <a href="https://github.com/ihatetoast/liri-node-app">
-                        <div class="projectTitleBar0"></div>
-                        <div class="projectTitleBar1"><h4>LIRI</h4></div>
-                      </a>
-                  </div>
-                  <div class="projectDesc">
-                    <div class="projectPara">
-                      <p>Horrido! Schabracke und Schlachtschüssel grämen emsig Waschweib. Der kess Wildfang foppen. Feuertaufe und Eisbein abkupfern pompös Donnerwetter. Der Lümmel piesacken die gemach Lausbub. Die Wuchtbrumme abkupfern die hochnäsig Tölpel.</p>
-                    </div>
-                    <div class="projectLinks">
-                      <ul>
-                        <li><a href="#">Live</a></li>
-                        <li><a href="#">Code</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div> -->
+
+
+
+
+<!-- TEMPLATE -->
+<!-- <div class="projectFrame">
+    <div class="projectPic">
+      <img src="./assets/images/XXX.svg" alt="XXX">
+      <a href="#" target="_blank">
+        <div class="projectTitleBar0"></div>
+        <div class="projectTitleBar1"><h4>XXX</h4></div>
+      </a>
+    </div>
+    <div class="projectDesc">
+      <p>XXX</p>
+    </div>
+    <div class="projectLinks">
+      <ul>
+        <li><a href="#"_blank">Demo</a></li>
+        <li><a href="#" target="_blank">Code</a></li>
+      </ul>
+    </div>
+  </div> -->
