--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">	
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
 		<meta name=“author" content=“Katy Cassidy | ihatetoast">
 		<title>Katy Cassidy | Works</title>
