still fixing port page for mobile

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">	
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
 		<meta name=“author" content=“Katy Cassidy | ihatetoast">
 		<title>Katy Cassidy | Works</title>
@@ -42,7 +42,7 @@
               <!-- LIRI -->
               <div class="projectFrame">
                 <div class="projectPic">
-                    <img src="./assets/liri-app.gif" alt="gif of code">
+                    <img src="./assets/liri-app.gif" alt="gif of code"/>
                     <a href="https://github.com/ihatetoast/liri-node-app">
                       <div class="projectTitleBar0"></div>
                       <div class="projectTitleBar1"><h4>LIRI</h4></div>
