added second page with hidden link for comparison and fix

--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 
 		</section>
 		<footer>
-			<p>Katy Cassidy | ihatetoast </p>
+      <p>Katy Cassidy <a href="./projects.html">|</a> ihatetoast </p>
 		</footer>
 	</body>
 </html>
