ah ha! position aboslute and mobile. test 4

--- a/projects.html
+++ b/projects.html
@@ -39,13 +39,11 @@
 			    <div class="projectHolder">
             <!-- LIRI -->
             <div class="projectFrame">
-                <div class="projectPic">
-                    <img src="./assets/liri-app.gif" alt="gif of code"/>
-                    <a href="https://github.com/ihatetoast/liri-node-app">
-                      <div class="projectTitleBar0"></div>
-                      <div class="projectTitleBar1"><h4>LIRI</h4></div>
-                    </a>
-                </div>
+              <div class="projectTitleBar"><h4>LIRI</h4></div>
+              <div class="projectPic">
+                <img src="./assets/liri-app.gif" alt="gif of code"/>
+                  </a>
+              </div>
                 <div class="projectDesc">
                   <p>Who is LIRI? LIRI is not who but a what: <span class="cranky">_Language_ Interpretation and Recognition Interface</span> built with NodeJS. LIRI understands four commands which are take the user&apos;s using Inquirer and presents the data with cli-table.</p>
                 </div>
