new template attempt to make this mobile friendly

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 				<nav>
 					<ul id="navLinks">
 						<li><a class="inactive" href="./index.html">about</a></li>
-						<li><a class="inactive" href="./portfolio.html">portfolio</a></li>
+						<li><a class="inactive" href="./projects.html">portfolio</a></li>
 						<li><a class="active" href="./contact.html">contact</a></li>
 					</ul>
 				</nav>
@@ -152,7 +152,7 @@
 
 		</section>
 		<footer>
-      <p>Katy Cassidy <a href="./projects.html">|</a> ihatetoast </p>
+      <p>Katy Cassidy | ihatetoast </p>
 		</footer>
 	</body>
 </html>
