--- a/projects.html
+++ b/projects.html
@@ -39,23 +39,120 @@
 			    <div class="projectHolder">
             <!-- LIRI -->
             <div class="projectFrame">
-              <div class="projectTitleBar"><h4>LIRI</h4></div>
-              <div class="projectPic">
-                <img src="./assets/liri-app.gif" alt="gif of code"/>
-                  </a>
+              <div class="portfolio">
+                <img src="assets/liri-app.gif" alt="gif of code being executed">
+                <a href="https://github.com/ihatetoast/liri-node-app">
+                  <p>LIRI</p>
+                </a>
               </div>
-                <div class="projectDesc">
-                  <p>Who is LIRI? LIRI is not who but a what: <span class="cranky">_Language_ Interpretation and Recognition Interface</span> built with NodeJS. LIRI understands four commands which are take the user&apos;s using Inquirer and presents the data with cli-table.</p>
-                </div>
-                <div class="projectLinks">
-                    <ul>
-                      <li><a href="https://api.glitch.com/liri-app-ihatetoast/console/5d64b962-3587-4175-9126-87319dd49cd0/" target="_blank">Demo (Glitch.com)</a></li>
-                      <li><a href="https://github.com/ihatetoast/liri-node-app" target="_blank">Code</a></li>
-                    </ul>
-                  </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="https://api.glitch.com/liri-app-ihatetoast/console/5d64b962-3587-4175-9126-87319dd49cd0/" target="_blank">Demo (Glitch.com)</a></li>
+                  <li><a href="https://github.com/ihatetoast/liri-node-app" target="_blank">Code</a></li>
+                </ul>
               </div>
-          </div><!-- end projectHolder --> 
-        </article><!-- end portContent --> 
+            </div>
+
+            <!-- HANGMAN -->
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="assets/images/hangman.svg" alt="hangman game">
+                <a href=" http://www.ihatetoast.com/hangman-game/">
+                <p>HANGMAN</p>
+                </a>
+              </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="http://www.ihatetoast.com/hangman-game/" target="_blank">Play</a></li>
+                  <li><a href="https://github.com/ihatetoast/hangman-game" target="_blank">Code</a></li>
+                </ul>
+              </div>
+            </div>
+          <!-- THANKSGIVING -->
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="./assets/images/thanksgiving.png" alt="a stomach and a plate">
+                <a href="http://www.ihatetoast.com/week-4-game/" target="_blank">
+                <p>BELLY BUSTER</p>
+                </a>
+              </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="http://www.ihatetoast.com/week-4-game/" target="_blank">Eat up</a></li>
+                  <li><a href="https://github.com/ihatetoast/week-4-game" target="_blank">Code</a></li>
+                </ul>
+              </div>
+
+            </div>
+            <!-- PURE CSS IMAGES -->
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="./assets/images/day49.png" alt="dance dance revolution pad">
+                <a href="http://ihatetoast-css-images.surge.sh/" target="_blank">
+                <p>50 CSS IMAGES</p>
+                </a>
+              </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="http://ihatetoast-css-images.surge.sh/" target="_blank">Log</a></li>
+                  <li><a href="https://codepen.io/collection/ABQNGQ/" target="_blank">Code</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- EGGS FOX FEATHERS: RPS -->
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="./assets/images/eggfoxfeathers.svg" alt="Foxes, eggs, and feathers in varying states of discomfort">
+                <a href="http://www.ihatetoast.com/eggfoxfeathers/" target="_blank">
+                <p>EGGS FOX FEATHERS</p>
+                </a>
+              </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="http://ihatetoast-eggfeathersfox.surge.sh/" target="_blank">Play</a></li>
+                  <li><a href="https://github.com/ihatetoast/eggfoxfeathers" target="_blank">Code</a></li>
+                </ul>
+              </div>
+            </div>
+
+             <!-- REACT: CRITTER SITTER -->
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="./assets/images/stan.jpg" alt="a woman kissing a greyhound">
+                <a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">
+                <p>CRITTER SITTER</p>
+                </a>
+              </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">Demo</a></li>
+                  <li><a href="https://github.com/ihatetoast/CritterSitter" target="_blank">Code</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- DODGY HAROLD -->
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="./assets/images/creepyman.svg" alt="a man in a blue hoodie">
+                <a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">
+                <p>DODGY HAROLD</p>
+                </a>
+              </div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">Get Advice</a></li>
+                  <li><a href="https://github.com/ihatetoast/creepyman-advice" target="_blank">Code</a></li>
+                </ul>
+              </div>
+            </div>
+            
+
+
+
+          </div>
+        </article>
 
 
 
@@ -159,9 +256,9 @@
             </div>
             <div class="clear"></div>
           </div>
-          </aside>
+        </aside>
 
-      </main>
+      </main> <!-- end port main-->
     </div> <!--end site-content-->
 
 		<footer>
@@ -176,20 +273,10 @@
 
 <!-- TEMPLATE -->
 <!-- <div class="projectFrame">
-    <div class="projectPic">
-      <img src="./assets/images/XXX.svg" alt="XXX">
-      <a href="#" target="_blank">
-        <div class="projectTitleBar0"></div>
-        <div class="projectTitleBar1"><h4>XXX</h4></div>
-      </a>
-    </div>
-    <div class="projectDesc">
-      <p>XXX</p>
-    </div>
-    <div class="projectLinks">
-      <ul>
-        <li><a href="#" target="_blank">Demo</a></li>
-        <li><a href="#" target="_blank">Code</a></li>
-      </ul>
-    </div>
-  </div> -->
+              <div class="portfolio">
+                <img src="assets/images/hangman.svg" alt="hangman game">
+                <a href=" http://www.ihatetoast.com/hangman-game/">
+                  <p>HANGMAN</p>
+                </a>
+              </div>
+            </div> -->
