--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
 				<nav>
 					<ul id="navLinks">
 						<li><a class="inactive" href="./index.html">about</a></li>
-						<li><a class="active" href="./portfolio.html">portfolio</a></li>
+						<li><a class="active" href="./projects.html">portfolio</a></li>
 						<li><a class="inactive" href="./contact.html">contact</a></li>
 					</ul>
 				</nav>
