seconds before defeat

--- a/projects.html
+++ b/projects.html
@@ -42,9 +42,10 @@
               <div class="portfolio">
                 <img src="assets/liri-app.gif" alt="gif of code being executed">
                 <a href="https://github.com/ihatetoast/liri-node-app">
-                  <p>LIRI</p>
                 </a>
+
               </div>
+              <div class="titleBar"><p>LIRI</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="https://api.glitch.com/liri-app-ihatetoast/console/5d64b962-3587-4175-9126-87319dd49cd0/" target="_blank">Demo (Glitch.com)</a></li>
