giving up for now

--- a/projects.html
+++ b/projects.html
@@ -2,14 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">	
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Katy Cassidy's UI, frontend, and fullstack portfolio as IHateToast.">
 		<meta name=“author" content=“Katy Cassidy | ihatetoast">
 		<title>Katy Cassidy | Works</title>
 		<link href="https://fonts.googleapis.com/css?family=Asul|Chivo" rel="stylesheet">
 		<link rel="stylesheet" href="./assets/styles/reset.css">
 		<link rel="stylesheet" href="./assets/styles/style.css">
-		<link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
@@ -59,9 +58,9 @@
               <div class="portfolio">
                 <img src="assets/images/hangman.svg" alt="hangman game">
                 <a href=" http://www.ihatetoast.com/hangman-game/">
-                <p>HANGMAN</p>
                 </a>
               </div>
+              <div class="titleBar"><p>HANGMAN</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="http://www.ihatetoast.com/hangman-game/" target="_blank">Play</a></li>
@@ -74,9 +73,9 @@
               <div class="portfolio">
                 <img src="./assets/images/thanksgiving.png" alt="a stomach and a plate">
                 <a href="http://www.ihatetoast.com/week-4-game/" target="_blank">
-                <p>BELLY BUSTER</p>
                 </a>
               </div>
+              <div class="titleBar"><p>BELLY BUSTER</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="http://www.ihatetoast.com/week-4-game/" target="_blank">Eat up</a></li>
@@ -93,6 +92,7 @@
                 <p>50 CSS IMAGES</p>
                 </a>
               </div>
+              <div class="titleBar"><p>50 CSS IMAGES</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="http://ihatetoast-css-images.surge.sh/" target="_blank">Log</a></li>
@@ -106,9 +106,9 @@
               <div class="portfolio">
                 <img src="./assets/images/eggfoxfeathers.svg" alt="Foxes, eggs, and feathers in varying states of discomfort">
                 <a href="http://www.ihatetoast.com/eggfoxfeathers/" target="_blank">
-                <p>EGGS FOX FEATHERS</p>
                 </a>
               </div>
+              <div class="titleBar"><p>EGGS FOX FEATHERS</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="http://ihatetoast-eggfeathersfox.surge.sh/" target="_blank">Play</a></li>
@@ -122,9 +122,9 @@
               <div class="portfolio">
                 <img src="./assets/images/stan.jpg" alt="a woman kissing a greyhound">
                 <a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">
-                <p>CRITTER SITTER</p>
                 </a>
               </div>
+              <div class="titleBar"><p>CRITTER SITTER</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="https://ihatetoast-crittersitter.herokuapp.com/home" target="_blank">Demo</a></li>
@@ -138,9 +138,9 @@
               <div class="portfolio">
                 <img src="./assets/images/creepyman.svg" alt="a man in a blue hoodie">
                 <a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">
-                <p>DODGY HAROLD</p>
                 </a>
               </div>
+              <div class="titleBar"><p>DODGY HAROLD</p></div>
               <div class="projectLinks">
                 <ul>
                   <li><a href="http://ihatetoast-dodgy-harold.surge.sh/" target="_blank">Get Advice</a></li>
