--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 	</head>
 	<script src="https://use.fontawesome.com/9ea2d86206.js"></script>
 
-	<body class="site">
+	<body>
 		<header>
 			<div class="content-header">
 				<div class="brand">
@@ -30,11 +30,9 @@
 				</nav>
 			</div>
     </header>
-    
-    <div class="site-content">
       <main class="portMain">
         <article class="portContent">
-          <h3 class="titleHeader">Projects</h3>
+          <h3 class="titleHeader">Projects: Some big, some small, all fun</h3>
           <hr>
 			    <div class="projectHolder">
             <!-- LIRI -->
@@ -150,95 +148,9 @@
             </div>
           </div>
         </article>
-<!-- ******************* -->
-<!-- SOCIAL MEDIA LINKS  -->
-<!-- ******************* -->
-        <aside class="socialMedia">
-          <div >
-            <h3 class="titleHeader">Find Me</h3>
-            <hr>
-            <div class="socialMedia-container">
-              <a href="https://github.com/ihatetoast" target="_blank" class="socialMedia-holder gitHub">
-                <div class="block">
-                  <div class="socialMediaPlatform">
-                    GitHub
-                  </div>
-                  <div class="socialMediaHandle">
-                    <i class="fa fa-github fa-lg github icons" id="dribbble" aria-hidden="true"></i>
-                    <span>ihatetoast</span>
-                  </div>
-                </div>
-              </a>
-  
-              <a href="https://codepen.io/ihatetoast/" target="_blank" class="socialMedia-holder codePen">
-                <div class="block">
-                  <div class="socialMediaPlatform">
-                    CodePen
-                  </div>
-                  <div class="socialMediaHandle">
-                    <i class="fa fa-codepen fa-lg codepen icons" id="codePen" aria-hidden="true"></i>
-                    <span>ihatetoast</span>
-                  </div>
-                </div>
-              </a>
-              
-              <a href="https://dribbble.com/ihatetoast" target="_blank" class="socialMedia-holder dribbble">
-                <div class="block">
-                  <div class="socialMediaPlatform">
-                    Dribbble
-                  </div>
-                  <div class="socialMediaHandle">
-                    <i class="fa fa-dribbble fa-lg dribbble icons" id="dribbble" aria-hidden="true"></i>
-                    <span>ihatetoast</span>
-                  </div>
-                </div>
-              </a>
-  
-              <a href="https://twitter.com/i_hate_toast" target="_blank" class="socialMedia-holder twitter">
-                <div class="block">
-                  <div class="socialMediaPlatform">
-                    Twitter
-                  </div>
-                  <div class="socialMediaHandle">
-                    <i class="fa fa-twitter fa-lg twitter icons" id="twitter" aria-hidden="true"></i>
-                    <span>@i_hate_toast</span>
-                  </div>
-                </div>
-              </a>
-  
-              <a href="https://ihatetoast.io/" target="_blank" class="socialMedia-holder wordPress">
-                <div class="block">
-                  <div class="socialMediaPlatform">
-                    WordPress
-                  </div>
-                  <div class="socialMediaHandle">
-                    <i class="fa fa-wordpress fa-lg wordPress icons" id="wordPress" aria-hidden="true"></i>
-                    <span>ihatetoast</span>
-                  </div>
-                </div>
-              </a>
-              <a href="https://www.linkedin.com/in/cassidykaty/" target="_blank" class="socialMedia-holder linkedIn">
-                <div class="block">
-                  <div class="socialMediaPlatform">
-                    LinkedIn
-                  </div>
-                  <div class="socialMediaHandle">
-                    <i class="fa fa-linkedin fa-lg linkedIn icons" id="linkedin" aria-hidden="true"></i>
-                    <span>ihatetoast</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="clear"></div>
-          </div>
-        </aside>
 
       </main> <!-- end port main-->
     </div> <!--end site-content-->
-
-		<footer>
-			<p>Katy Cassidy | ihatetoast </p>
-		</footer>
 	</body>
 </html>
 
