added CLI hangman

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,24 @@
           <h3 class="titleHeader">Projects: Some big, some small, all fun</h3>
           <hr>
 			    <div class="projectHolder">
+            <!-- CLINGMAN: HANGMAN IN THE CLI -->
+            <div class="projectFrame">
+                <div class="portfolio">
+                  <img src="assets/clingman-app.gif" alt="gif of code being executed">
+                  <a href="https://github.com/ihatetoast/cli_hangman">
+                  </a>
+                </div>
+                <div class="titleBar"><p>CLIngman</p></div>
+                <div class="projectLinks">
+                  <ul>
+                    <li>Demo above</li>
+                    <li><a href="https://github.com/ihatetoast/cli_hangman" target="_blank">Code</a></li>
+                  </ul>
+                </div>
+              </div>
+
+
+
             <!-- LIRI -->
             <div class="projectFrame">
               <div class="portfolio">
@@ -45,7 +63,7 @@
               <div class="titleBar"><p>LIRI</p></div>
               <div class="projectLinks">
                 <ul>
-                  <li><a href="https://api.glitch.com/liri-app-ihatetoast/console/5d64b962-3587-4175-9126-87319dd49cd0/" target="_blank">Demo (Glitch.com)</a></li>
+                  <li>Demo above</a></li>
                   <li><a href="https://github.com/ihatetoast/liri-node-app" target="_blank">Code</a></li>
                 </ul>
               </div>
