added the ufo todo list

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,23 @@
           <h3 class="titleHeader">Projects: Some big, some small, all fun</h3>
           <hr>
 			    <div class="projectHolder">
+
+            <!-- THANKSGIVING -->
+            <div class="projectFrame">
+                <div class="portfolio">
+                  <img src="./assets/images/fthoseufos.png" alt="screenshot of text of a todo list">
+                  <a href="https://ihatetoast-fthoseufos.herokuapp.com/" target="_blank">
+                  </a>
+                </div>
+                <div class="titleBar"><p>F Those UFOs</p></div>
+                <div class="projectLinks">
+                  <ul>
+                    <li><a href="https://ihatetoast-fthoseufos.herokuapp.com/ " target="_blank">Heroku</a></li>
+                    <li><a href="https://github.com/ihatetoast/burgerhitlist" target="_blank">Code</a></li>
+                  </ul>
+                </div>
+  
+              </div>
             <!-- CLINGMAN: HANGMAN IN THE CLI -->
             <div class="projectFrame">
                 <div class="portfolio">
@@ -84,6 +101,7 @@
                 </ul>
               </div>
             </div>
+
           <!-- THANKSGIVING -->
             <div class="projectFrame">
               <div class="portfolio">
