added friend finder

--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,25 @@
         <article class="portContent">
           <h3 class="titleHeader">Projects: Some big, some small, all fun</h3>
           <hr>
+          <!-- DOUBLE DATA -->
 			    <div class="projectHolder">
+            <div class="projectFrame">
+              <div class="portfolio">
+                <img src="./assets/images/doubledata.png" alt="screenshot of survey and photo of match">
+                <a href="https://ihatetoast-doubledata.herokuapp.com" target="_blank">
+                </a>
+              </div>
+              <div class="titleBar"><p>Double Data</p></div>
+              <div class="projectLinks">
+                <ul>
+                  <li><a href="https://ihatetoast-doubledata.herokuapp.com" target="_blank">Heroku</a></li>
+                  <li><a href="https://github.com/ihatetoast/friendfinder" target="_blank">Code</a></li>
+                </ul>
+              </div>
+            </div>
 
-            <!-- THANKSGIVING -->
+
+            <!-- F THOSE UFOS -->
             <div class="projectFrame">
                 <div class="portfolio">
                   <img src="./assets/images/fthoseufos.png" alt="screenshot of text of a todo list">
@@ -50,7 +66,6 @@
                     <li><a href="https://github.com/ihatetoast/burgerhitlist" target="_blank">Code</a></li>
                   </ul>
                 </div>
-  
               </div>
             <!-- CLINGMAN: HANGMAN IN THE CLI -->
             <div class="projectFrame">
